<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".EX3">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/E3Q1"
        android:textColor="#000000"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/E3Q1R1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/E3Q1R1"
        android:textColor="#000000"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/E3Q1R2"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_weight="1"
        android:text="@string/E3Q1R2"
        android:textColor="#000000"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/E3Q1R3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/E3Q1R3"
        android:textColor="#000000"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/E3Q1R4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/E3Q1R4"
        android:textSize="16sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/E3Q2"
        android:textColor="#000000"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/Rd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rb1"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/E3Q2R1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/E3Q2R2"
            android:textColor="#000000"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/E3Close" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/E3Next" />
    </LinearLayout>
</LinearLayout>